force-app/main/default/objects/Route_Assignment__c/Route_Assignment__c.object-meta.xml
<CustomObject>
    <label>Route Assignment</label>
    <nameField>
        <displayFormat>RA-{000000}</displayFormat>
        <label>Route assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Route Assignment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>