force-app/main/default/objects/Route_Assignment__c/fields/Pickup_Delivery_Route__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Delivery_Route__c</fullName>
    <label>Pickup &amp; Delivery Route</label>
    <referenceTo>Pickup_Delivery_Route__c</referenceTo>
    <relationshipLabel>Route Assignment</relationshipLabel>
    <relationshipName>Route_Assignment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>