force-app/main/default/objects/Route_Assignment__c/fields/Route_Assigned_By__c.field-meta.xml
<CustomField>
    <fullName>Route_Assigned_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route Assigned By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RouteAssignedBy</relationshipName>
    <type>Lookup</type>
</CustomField>