force-app/main/default/objects/Route_Assignment__c/fields/Route_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Route_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Route_Assigned_To</relationshipName>
    <type>Lookup</type>
</CustomField>